posiGen_FullsendBox/src/objects/Formula_Builder_Helper__c.object
<CustomObject>
    <fields>
        <fullName>Business_Installation_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Installation Step</label>
        <referenceTo>Business_Installation_Step__c</referenceTo>
        <relationshipLabel>Formula Builder Helper</relationshipLabel>
        <relationshipName>Formula_Builder_Helper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Stage</label>
        <referenceTo>Business_Stage__c</referenceTo>
        <relationshipLabel>Formula Builder Helper</relationshipLabel>
        <relationshipName>Formula_Builder_Helper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Formula_String__c</fullName>
        <label>Formula String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Formula Builder Helper</label>
    <nameField>
        <displayFormat>FB-{00000}</displayFormat>
        <label>Formula Builder Helper Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formula Builder Helper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>